--- a/style.css
+++ b/style.css
@@ -80,7 +80,7 @@ body{
 	display: flex;
 	flex:1;
 	flex-direction: column;
-	margin-top:-23rem;
+	margin-top:-25%;
 	justify-content:center;
 	font-family: sans-serif;
 	font-size: 20px;
