--- a/style.css
+++ b/style.css
@@ -75,13 +75,18 @@ body{
 	font-size: 0.9rem;
 }
 
+.top-img{
+	position:relative;
+}
+
 .main-content .center-text{
 	list-style: none;
+	position:absolute;
+	top: 45%;
+	left:42%;
 	display: flex;
 	flex:1;
 	flex-direction: column;
-	margin-top:-25%;
-	justify-content:center;
 	font-family: sans-serif;
 	font-size: 20px;
 	line-height: 0.1rem;
